--- a/attack.html
+++ b/attack.html
@@ -216,13 +216,8 @@
                         needed).
                      </p>
                      <div class="modal-body__attack">A result of the attack</div>
-                     <div class="modal-body__result">
-                        <img src="assets/images/fish-in-ice.png" />
-                     </div>
+                     <div class="modal-body__result">x17 for 4 days</div>
                      <div class="modal-body__attack">Enter the wallet address which you want to attack</div>
-                     <div class="modal-body__result">
-                        <img src="assets/images/fish-in-ice.png" />
-                     </div>
                      <button class="button modal-body__btn" data-color="red">Attack</button>
                   </div>
                </div>
