--- a/attack.html
+++ b/attack.html
@@ -210,14 +210,20 @@
                      </div>
                   </div>
                   <div class="modal-body">
-                     <div class="modal-body__question">How many units you want to use for the attack?</div>
-
-                     <div class="modal-body__attack">A result of the attack</div>
-                     <div class="modal-body__result">
-                        <img class="modal-body__result-img" src="assets/images/fish-in-ice.png" />
-                        <div class="modal-body__result-text">x17 for 4 days</div>
+                     <div class="modal__question">How many units you want to use for the attack?</div>
+                     <div class="modal-value">
+                        <div class="modal-value__min">1</div>
+                        <div class="modal-value__line">
+                           <div class="modal-value__point"></div>
+                        </div>
+                        <div class="modal-value__max">78</div>
                      </div>
-                     <div class="modal-body__attack">Enter the wallet address which you want to attack</div>
+                     <div class="modal__attack">A result of the attack</div>
+                     <div class="modal__result">
+                        <img class="modal__result-img" src="assets/images/fish-in-ice.png" />
+                        <div class="modal__result-text">x17 for 4 days</div>
+                     </div>
+                     <div class="modal__attack">Enter the wallet address which you want to attack</div>
                      <input
                         class="modal__input"
                         name=" email "
