--- a/attack.html
+++ b/attack.html
@@ -214,7 +214,9 @@
                      <div class="modal-value">
                         <div class="modal-value__min">1</div>
                         <div class="modal-value__line">
-                           <div class="modal-value__point"></div>
+                           <div class="modal-value__point">
+                              <div class="modal-value__point-value">0</div>
+                           </div>
                         </div>
                         <div class="modal-value__max">78</div>
                      </div>
