--- a/shop-full.html
+++ b/shop-full.html
@@ -59,7 +59,7 @@
          </div>
       </header>
       <main class="main main-personage">
-         <div class="personage__top" data-color="blue">
+         <div class="personage__top" data-color="red">
             <div class="container container_small">
                <div class="main-btns">
                   <div class="main-btns__items">
@@ -83,25 +83,16 @@
                      </div>
                   </div>
                </div>
-               <div class="personage__img"><img src="assets/images/cards/pirania.png" /></div>
+               <div class="personage__img"><img src="assets/images/cards/chest.png" /></div>
             </div>
          </div>
          <div class="personage__bottom personage-info">
             <div class="container container_small">
                <div class="personage-info__items">
                   <div class="personage-info__item personage-info__item_left">
-                     <div class="text-title">Piranha</div>
-                     <div class="range-line range-line_power">
-                        <span class="range-line__icon"
-                           ><svg class="icon icon_power" role="img">
-                              <use href="assets/images/sprite.svg#power"></use>
-                           </svg>
-                        </span>
-                        <div class="range-line__line">
-                           <div class="range-line__line-front" style="width: 25%"></div>
-                           <div class="range-line__line-back"></div>
-                        </div>
-                     </div>
+                     <div class="text-title">Chest Gold</div>
+                     <div class="card__text">100 - 1000 Piranhas</div>
+                     <div class="card__text">1 - 5 Megalodon</div>
                   </div>
                   <div class="personage-info__item personage-info__item_right">
                      <div class="text-title">Price <span>... </span> ETH</div>
